# esp_lr2021_radio

./: .gitignore  CMakeLists.txt  gc032a.c  lcd.c  sdkconfig.defaults
main/: CMakeLists.txt  app_config.h  app_main.cpp  audio_diagnostics.cpp  audio_diagnostics.hpp  board_config.h  bsp.h  bsp_audio.c  bsp_button.c  bsp_con6.c  bsp_i2c.c  bsp_lcd.c  camera_uart.cpp  camera_uart.hpp  gc032a_regs.hpp  idf_component.yml  main.c  opus_codec.cpp  opus_codec.hpp  radio_ping.cpp  radio_ping.hpp
tools/: camu_uart_viewer.py
